--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cloudscraper": "^4.6.0",
     "express": "^4.21.2",
-    "puppeteer": "^24.3.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "@sparticuz/chromium": "^110.0.0",
+    "puppeteer-core": "^20.8.0"
   }
 }
